src/styles/main.css
@import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap");

html {
  font-size: 12px;
  background: #242e42;
}

.App {
  display: flex;
  flex-direction: column;
  place-items: center;
  height: 100vh;
  width: 100vw;
  background: #242e42;
}

#game-wrapper {
  display: grid;
  grid-template-rows: 1fr 9fr;
  width: 100%;
  place-content: center;
  color: #9a2881;
  text-shadow: 1px 1px 0px black;
  font-family: "Press Start 2P", cursive;
  text-align: center;
}

#header-wrapper {
  align-self: center;
  font-size: calc((0.2em + 1.6vmin) + (0.2em + 1.6vmax));
  color: #9a2881;
  text-shadow: 2px 2px 0px #9a8228;
  font-family: "Press Start 2P", cursive;
  text-align: center;
}

#board-wrapper {
  display: flex;
  flex-direction: column;
  place-items: center;
  align-self: center;
  padding-bottom: 10px;
  width: 100vw;
}

#board-wrapper__player-board-wrapper {
  display: grid;
  grid-column: 1;
  grid-row: 1;
  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
  height: 300px;
  width: 300px;
}

#board-wrapper__player-board-wrapper--preparing {
  display: grid;
  grid-column: 1;
  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
  height: 300px;
  width: 300px;
}

#info-area {
  display: grid;
  grid-column: 2;
  grid-row: 1;
  place-items: center;
  grid-template-rows: 1fr 4fr 1fr;
  height: 100%;
  width: 100%;
  font-size: calc((0.2em + 1vmin) + (0.2em + 1vmax));
}

#cat-face-wrapper {
  display: flex;
  width: 100%;
  align-items: center;
  place-content: center;
}

#cat-face {
  display: grid;
  grid-template-rows: 2fr 1fr;
  place-items: center;
}

#cat-lives-wrapper {
  display: grid;
  width: 45%;
  justify-content: center;
  place-items: center;
  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
}

.cat-lives-wrapper__heart {
  width: 3vw;
  max-width: 110px;
  min-width: 25px;
}

#cat-face-wrapper__cat-face {
  margin-bottom: 10px;
  width: 10vw;
  height: auto;
  min-width: 100px;
}

#board-wrapper__computer-board-wrapper {
  display: grid;
  grid-column: 3;
  grid-row: 1;
  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
  height: 300px;
  width: 300px;
}

.empty-block {
  background: #536996;
  -webkit-box-shadow: 0px 0px 0px 1px #242e42;
  -moz-box-shadow: 0px 0px 0px 1px #242e42;
  box-shadow: 0px 0px 0px 1px #242e42;
  cursor: pointer;
}

.empty-block--hovered {
  background: #1c6c67;
  -webkit-box-shadow: 0px 0px 0px 1px #242e42;
  -moz-box-shadow: 0px 0px 0px 1px #242e42;
  box-shadow: 0px 0px 0px 1px #242e42;
}

.empty-block--color {
  background: #536996;
  -webkit-box-shadow: 0px 0px 0px 1px #242e42;
  -moz-box-shadow: 0px 0px 0px 1px #242e42;
  box-shadow: 0px 0px 0px 1px #242e42;
  cursor: pointer;
  transition: all ease-in-out;
}

.empty-block--color:hover {
  background: #1c6c67;
}

.empty-block--hovered--not-allowed {
  background: #536996;
  -webkit-box-shadow: 0px 0px 0px 1px #242e42;
  -moz-box-shadow: 0px 0px 0px 1px #242e42;
  box-shadow: 0px 0px 0px 1px #242e42;
  cursor: not-allowed;
}

.ship-block {
  background: #f51743;
  -webkit-box-shadow: 0px 0px 0px 1px #242e42;
  -moz-box-shadow: 0px 0px 0px 1px #242e42;
  box-shadow: 0px 0px 0px 1px #242e42;
}

.player-ship-block {
  -webkit-box-shadow: 0px 0px 0px 1px #242e42;
  -moz-box-shadow: 0px 0px 0px 1px #242e42;
  box-shadow: 0px 0px 0px 1px #242e42;
  background: #289a88;
  height: 100%;
  cursor: not-allowed;
}

.player-ship-block--removable {
  -webkit-box-shadow: 0px 0px 0px 1px #242e42;
  -moz-box-shadow: 0px 0px 0px 1px #242e42;
  box-shadow: 0px 0px 0px 1px #242e42;
  background: #289a88;
  height: 100%;
  cursor: pointer;
}

.player-ship-block--hit {
  display: flex;
  place-items: center;
  place-content: center;
  -webkit-box-shadow: 0px 0px 0px 1px #242e42;
  -moz-box-shadow: 0px 0px 0px 1px #242e42;
  box-shadow: 0px 0px 0px 1px #242e42;
  background: #9a2881;
  height: 100%;
}

.player-ship-block--sunk {
  -webkit-box-shadow: 0px 0px 0px 1px #242e42;
  -moz-box-shadow: 0px 0px 0px 1px #242e42;
  box-shadow: 0px 0px 0px 1px #242e42;
  background: #9a8228;
  height: 100%;
}

.miss-block {
  -webkit-box-shadow: 0px 0px 0px 0.5px #242e42;
  -moz-box-shadow: 0px 0px 0px 0.5px #242e42;
  box-shadow: 0px 0px 0px 0.5px #242e42;
}

.invisible-block {
  background: #536996;
  -webkit-box-shadow: 0px 0px 0px 1px #242e42;
  -moz-box-shadow: 0px 0px 0px 1px #242e42;
  box-shadow: 0px 0px 0px 1px #242e42;
  cursor: pointer;
}

.enemy-ship-block {
  background: #536996;
  -webkit-box-shadow: 0px 0px 0px 1px #242e42;
  -moz-box-shadow: 0px 0px 0px 1px #242e42;
  box-shadow: 0px 0px 0px 1px #242e42;
  cursor: pointer;
}

.enemy-ship-block--color {
  background: #536996;
  -webkit-box-shadow: 0px 0px 0px 1px #242e42;
  -moz-box-shadow: 0px 0px 0px 1px #242e42;
  box-shadow: 0px 0px 0px 1px #242e42;
  cursor: pointer;
  transition: all ease-in-out;
}

.enemy-ship-block--color:hover {
  background: #1c6c67;
  -webkit-box-shadow: 0px 0px 0px 1px #242e42;
  -moz-box-shadow: 0px 0px 0px 1px #242e42;
  box-shadow: 0px 0px 0px 1px #242e42;
  cursor: pointer;
}

.enemy-ship-block--hit {
  display: flex;
  place-items: center;
  place-content: center;
  background: #9a2881;
  -webkit-box-shadow: 0px 0px 0px 1px #242e42;
  -moz-box-shadow: 0px 0px 0px 1px #242e42;
  box-shadow: 0px 0px 0px 1px #242e42;
  height: 100%;
}

.enemy-ship-block--sunk {
  background: #9a8228;
  -webkit-box-shadow: 0px 0px 0px 1px #242e42;
  -moz-box-shadow: 0px 0px 0px 1px #242e42;
  box-shadow: 0px 0px 0px 1px #242e42;
  height: 100%;
}
/* ... */

